Added docs for mongo_connector

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -129,3 +129,4 @@ nav:
       - Database:
           - backend/db/index.md
           - backend/db/db_connector.md
+          - backend/db/mongo_connector.md
