--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ plugins:
   - tags
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
-  - mermaid2
+  - render_swagger
 
 # Extensions
 markdown_extensions:
