--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.11"
 mkdocs = "^1.6.0"
 mkdocs-material = "^9.5.29"
 pre-commit = "^3.7.1"
+mkdocs-jupyter = "^0.24.8"
+jupyter-contrib-nbextensions = "^0.7.0"
+jupyter = "^1.0.0"
+notebook = "6.1.5"
 
 
 [build-system]
