--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,6 +110,7 @@ markdown_extensions:
 extra_javascript:
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+  - js/doculabels.js
 
 extra_css:
   - https://unpkg.com/katex@0/dist/katex.min.css
