--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+jupyter==1.0.0
+jupyter-contrib-nbextensions==0.7.0
 mkdocs==1.6.0
+mkdocs-jupyter==0.24.8
 mkdocs-material==9.5.29
+notebook==6.1.5
 pre-commit==3.7.1
