Centers mermaid diagrams

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,7 @@ extra_javascript:
 
 extra_css:
   - https://unpkg.com/katex@0/dist/katex.min.css
+  - styles/mermaid.css
 nav:
   - Home: index.md
   - Projects:
