--- a/.github/workflows/run-checks.yml
+++ b/.github/workflows/run-checks.yml
@@ -1,4 +1,4 @@
-name: Checks
+name: Run Checks
 
 on:
   pull_request:
@@ -13,7 +13,7 @@ on:
       - "**/*.yml"
 
 jobs:
-  lint_and_check:
+  run_checks:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
