--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,6 +128,7 @@ nav:
               - Webapp:
                   - projects/genai/health-hub/webapp/introduction.md
                   - Backend:
+                      - projects/genai/health-hub/webapp/backend/introduction.md
                       - projects/genai/health-hub/webapp/system_architecture.md
                       - Types:
                           - projects/genai/health-hub/webapp/backend/types/overview.md
