--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,3 +69,12 @@ repos:
         additional_dependencies:
           - prettier@3.2.5
           - prettier-plugin-toml@2.0.1
+
+  - repo: local
+    hooks:
+      - id: mkdocs-build
+        name: Build MkDocs
+        entry: mkdocs build --strict
+        language: system
+        pass_filenames: false
+        files: '^(mkdocs\.yml|docs/.*\.md)$'
