--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ jupyter-contrib-nbextensions = "^0.7.0"
 mkdocs = "^1.6.0"
 mkdocs-material = "^9.5.29"
 mkdocs-jupyter = "^0.24.8"
+mkdocs-render-swagger-plugin = "0.1.2"
 notebook = "6.1.5"
 pre-commit = "^3.7.1"
 
