--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,15 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
+      - id: check-json
+      - id: check-toml
+      - id: check-yaml
+        exclude: "mkdocs.yml"
       - id: check-added-large-files
         args: [--maxkb=2500]
       - id: end-of-file-fixer
       - id: requirements-txt-fixer
       - id: trailing-whitespace
-      - id: check-toml
       - id: detect-private-key
       - id: mixed-line-ending
 
@@ -65,6 +68,7 @@ repos:
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
+        args: [--fix]
         types_or: [toml, css, json, yaml, markdown]
         additional_dependencies:
           - prettier@3.2.5
