Added docs for populater

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,6 +153,8 @@ nav:
                           - Mongo:
                               - projects/genai/health-hub/webapp/backend/db/mongo/mongo_connector.md
                               - projects/genai/health-hub/webapp/backend/db/mongo/beanie_documents.md
+                  - Misc:
+                      - projects/genai/health-hub/webapp/misc/populator.md
 
           - Example Project:
               - Section One:
