--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,6 +131,7 @@ nav:
                       - projects/genai/health-hub/webapp/frontend/introduction.md
                       - Services:
                           - projects/genai/health-hub/webapp/frontend/services/cluster.md
+                          - projects/genai/health-hub/webapp/frontend/services/job.md
                           - projects/genai/health-hub/webapp/frontend/services/colour.md
                   - Backend:
                       - projects/genai/health-hub/webapp/backend/introduction.md
