--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,11 @@ extra:
         role: Contributor
         avatar: https://avatars.githubusercontent.com/u/80683209?v=4
         url: https://github.com/lyndonlim27
+    - Ho Si Xian:
+        alias: Si Xian
+        role: Contributor
+        avatar: https://avatars.githubusercontent.com/u/60807138?v=4
+        url: https://github.com/sixiannn
 
 # Extensions
 markdown_extensions:
@@ -215,5 +220,10 @@ nav:
               - Section Two:
                   - projects/genai/example-project/section-two/index.md
                   - projects/genai/example-project/section-two/introduction.md
+          - Conversational Assistant:
+            - Webapp: 
+              - Backend:
+                  - API:
+                    - projects/genai/conversational-assistant/webapp/backend/api/endpoints.md
   - Articles:
       - blog/index.md
