--- a/docs/projects/genai/conversational-assistant/webapp/backend/api/chat_endpoints.yaml
+++ b/docs/projects/genai/conversational-assistant/webapp/backend/api/chat_endpoints.yaml
@@ -92,10 +92,6 @@ components:
         query_message:
           type: string
           description: Transcribed message from the voice query
-        audio:
-          type: string
-          format: binary
-          description: Audio file of response_message
         sources:
           type: array
           items:
@@ -137,8 +133,8 @@ components:
       properties:
         role:
           type: string
-          description: Role of the message sender (USER or SYSTEM)
-          enum: ["USER", "SYSTEM"]
+          description: Role of the message sender (user or system)
+          enum: ["user", "system"]
         message:
           type: string
           description: Content of the message
@@ -151,9 +147,9 @@ components:
       properties:
         profile_type:
           type: string
-          description: Type of profile (Myself or Others)
-          enum: ["Myself", "Others"]
-          example: Myself
+          description: Type of profile (myself or others)
+          enum: ["myself", "others", "general"]
+          example: myself
         user_age:
           type: integer
           description: Age of the user
@@ -228,7 +224,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/VoiceMessageResponse"
 
-  /tts:
+  /speech:
     post:
       summary: To voice out text messages in the chat interface
       tags:
